--- a/src/components/optionsmenu/OptionsMenu.css
+++ b/src/components/optionsmenu/OptionsMenu.css
@@ -1,3 +1,15 @@
+.options-menu-container {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .options-menu-overlay {
   position: fixed;
   left: 0;
@@ -5,10 +17,6 @@
   top: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.5);
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .options-menu-modal {
